--- a/bluer.ipynb
+++ b/bluer.ipynb
@@ -3379,14 +3379,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting bluer.py\n"
+      "Writing bluer.py\n"
      ]
     }
    ],
@@ -3434,8 +3434,8 @@
     "                'category':chunk[i]['foodTypes'],\n",
     "                'menu':chunk[i]['statusInfo']['menu'],\n",
     "                'tel':chunk[i]['defaultInfo']['phone'],\n",
-    "                # 'addr':chunk[i]['juso']['jibunAddr'],\n",
-    "                'addr':chunk[i]['juso']['roadAddrPart1'],\n",
+    "                'addr':chunk[i]['juso']['jibunAddr'],\n",
+    "#                 'addr':chunk[i]['juso']['roadAddrPart1'],\n",
     "                'lat':chunk[i]['gps']['latitude'],\n",
     "                'lng':chunk[i]['gps']['longitude'],\n",
     "                'ribbonType':chunk[i]['headerInfo']['ribbonType'],\n",
