--- a/preprocessing_final.ipynb
+++ b/preprocessing_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,13 +300,13 @@
     "# df 전처리\n",
     "\n",
     "df = df[['fname', 'name', 'tel', 'addr', 'si', 'gu', 'dong', 'bizhour', 'category', 'menu',\n",
-    "       'context', 'microreview', 'img', 'lng', 'lat', 'n_rating', 'b_rating',\n",
+    "       'context', 'microreview', 'img', 'lat', 'lng', 'n_rating', 'b_rating',\n",
     "       'mg_rating', 'd_rating', 'mn_rating']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
        "[10922 rows x 21 columns]"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -947,7 +947,7 @@
        "max        4.500000      5.000000      4.820000  "
       ]
      },
-     "execution_count": 235,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1002,16 +1002,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x235981e8c08>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x238535463c8>"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1046,16 +1046,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_excel('./df.xlsx')"
+    "df.to_csv('./df.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
